# Radium-PluginExample

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: pull-request-ci.yml
CameraManip/: CMakeLists.txt  README.md
CameraManip/src/: CameraManipPlugin.cpp  CameraManipPlugin.hpp
CameraManip/src/UI/: CameraManipUI.cpp  CameraManipUI.h  CameraManipUI.hpp  CameraManipUI.ui
Dummy/: CMakeLists.txt  README.md
Dummy/src/: DummyComponent.cpp  DummyComponent.hpp  DummyPlugin.cpp  DummyPlugin.hpp  DummySystem.cpp  DummySystem.hpp  DummyTask.cpp  DummyTask.hpp
EntityAnimator/: CMakeLists.txt  README.md
EntityAnimator/src/: EntityAnimatorPlugin.cpp  EntityAnimatorPlugin.hpp  EntityAnimatorPluginMacros.hpp  EntityAnimatorSystem.hpp
MeshAnimator/: CMakeLists.txt  README.md
MeshAnimator/src/: MeshAnimatorPlugin.cpp  MeshAnimatorPlugin.hpp  MeshAnimatorPluginMacros.hpp  MeshAnimatorSystem.cpp  MeshAnimatorSystem.hpp
MeshAnimator/src/UI/: MeshAnimatorUI.cpp  MeshAnimatorUI.h  MeshAnimatorUI.ui
MeshFeatureTracking/: CMakeLists.txt  README.md
MeshFeatureTracking/src/: MeshFeatureTrackingComponent.cpp  MeshFeatureTrackingComponent.hpp  MeshFeatureTrackingPlugin.cpp  MeshFeatureTrackingPlugin.hpp
MeshFeatureTracking/src/UI/: MeshFeatureTrackingUI.cpp  MeshFeatureTrackingUI.h  MeshFeatureTrackingUI.hpp
MeshPaint/: CMakeLists.txt  README.md
MeshPaint/src/: MeshPaintComponent.cpp  MeshPaintComponent.hpp  MeshPaintPlugin.cpp  MeshPaintPlugin.hpp  MeshPaintSystem.cpp  MeshPaintSystem.hpp
MeshPaint/src/UI/: MeshPaintUI.cpp  MeshPaintUI.h
cmake/: FindRadium.cmake
fake-toon/: CMakeLists.txt  FakeToonMaterial.cpp  FakeToonMaterial.hpp  README.md  plugin.cpp  plugin.hpp  system.cpp  system.hpp
fake-toon/Resources/Shaders/: FRAGMENT_SHADER.frag
fake-toon/Shaders/: FRAGMENT_SHADER.frag
fake-toon/src/: FakeToonMaterial.cpp  FakeToonMaterial.hpp  plugin.cpp  plugin.hpp  system.cpp  system.hpp
laplacian-smoothing/: CMakeLists.txt  README.md  plugin.hpp  system.cpp  system.hpp  widget.hpp
laplacian-smoothing/src/: plugin.cpp  plugin.hpp  system.cpp  system.hpp  widget.cpp  widget.hpp
laplacian-smoothing/ui/: widget.ui
radiance-scaling/: CMakeLists.txt  plugin.cpp  plugin.hpp  system.cpp  system.hpp
src/: plugin.cpp  plugin.hpp  system.cpp  system.hpp  widget.cpp  widget.hpp  widget.ui
